--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="./assets/hw/alis cv.pdf">
+              <a href="./assets/hw/cv.jpg">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
